--- a/Front - Proyecto/src/Biologo/PublicacionesEditadas.html
+++ b/Front - Proyecto/src/Biologo/PublicacionesEditadas.html
@@ -59,7 +59,7 @@
     }
     </style>
 </head>
-<body class="bg-white w-full h-full box-border usuario">
+<body onload="ObtenerBiologo()" class="bg-white w-full h-full box-border usuario">
     <header class="w-full bg-[#276B58] fixed z-[2]">
         <div class="flex items-center justify-between px-4 py-2">
             <div class="flex items-center md:ml-4 ">
@@ -70,12 +70,17 @@
                 <h1 class="text-[#FFFFFF] text-2xl ml-12 hidden lg:block xl:block">Flora y Fauna UTP</h1> <!--Titulo-->
             </div>
 
+            <div class="flex items-center">
+
+            <button onclick="mostrarVerificacion()" id="mostrarVerificacion" class="text-[#FFFFFF] mr-6 text-sm md:text-lg lg:text-lg xl:text-lg hover:text-[#99E0FF] font-semibold">Enviar Solicitud de Verificación</button>
+
             <button id="mostrarPerfil">
                 <a href="">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Charles_Darwin_1.png?raw=true" alt="user icon">
+                    <img id="imgPerfil" alt="user" class="w-12 h-12 ml-2">
                 </a>
             </button>
 
+            </div>
         </div>
     </header>
 
@@ -89,7 +94,7 @@
         </div>
     </div>
 
-    <nav class="fixed lg:top-[5.4rem] top-[4.7rem] md:px-10 w-full z-[1] lg:bg-white bg-[#F8F5F5]">
+    <nav class="fixed lg:top-[5.4rem] top-[4rem] md:px-10 w-full z-[1] lg:bg-white bg-[#F8F5F5]">
         <div class="flex md:text-[16px] text-[12.5px] justify-around mt-2 mb-2 h-[2.5rem] md:h-auto">
             <!-- Enlace "Inicio" -->
             <a href="Biologo - Inicio.html" class="hover:bg-[#D7EFFF] md:p-1 md:px-4 rounded-[50px] lg:block hidden">
@@ -110,50 +115,66 @@
         <div class="mt-5 ml-10 mr-10">
             <div class="flex items-center mb-3">
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/home-white.png?raw=true">
-                <a href="Usuario - Inicio.html" class="ml-2 text-lg font-bold">Inicio</a>
-            </div>
-            <div class="flex items-center">
-                <a href="#">Editar Perfil</a>
-                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Edit_fill.png?raw=true" alt="edit" class="ml-3">
+                <a href="Biologo - Inicio.html" class="ml-2 text-lg font-bold">Inicio</a>
             </div>
             <div class="grid rounded-[10px] p-1">
                 <h3 class="font-bold">Categorias</h3>
                 <ul class="ml-2">
-                    <li class="mb-3">
-                        <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Flora</a>
+                    <li>
+                        <button onclick="menuCategoria('flora')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                            Flora
+                        </button>
                         <div>
                             <ul class="grid ml-4">
                                 <li>
-                                    <a href="#" class="hover:underline cursor-pointer hover:text-[#defdfb]">Hierbas</a>
+                                    <button onclick="menuCategoria('hierbas')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                        Hierbas
+                                    </button>
                                 </li>
                                 <li>
-                                    <a href="#" class="hover:underline cursor-pointer hover:text-[#defdfb]">Planta</a>
+                                    <button onclick="menuCategoria('planta')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                        Planta
+                                    </button>
                                 </li>
                                 <li>
-                                    <a href="#" class="hover:underline cursor-pointer hover:text-[#defdfb]">Árboles</a>
+                                    <button onclick="menuCategoria('arboles')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                        Árboles
+                                    </button>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <hr>
                     <li class="mt-3 mb-3">
-                        <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Fauna</a>
-                        <div>
-                            <ul class="grid ml-4">
-                                <li>
-                                    <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Aves</a>
-                                </li>
-                                <li>
-                                    <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Reptiles</a>
-                                </li>
-                                <li>
-                                    <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Artrópodos</a>
-                                </li>
-                                <li>
-                                    <a href=""  class="hover:underline cursor-pointer hover:text-[#defdfb]">Mamíferos</a>
-                                </li>
-                            </ul>
-                        </div>
+                        <li>
+                            <button onclick="menuCategoria('fauna')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                Fauna
+                            </button>
+                            <div>
+                                <ul class="grid ml-4">
+                                    <li>
+                                        <button onclick="menuCategoria('aves')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                            Aves
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button onclick="menuCategoria('reptiles')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                            Reptiles
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button onclick="menuCategoria('artropodos')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                            Artrópodos
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button onclick="menuCategoria('mamiferos')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                            Mamíferos
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                     </li>
                 </ul>
             </div>
@@ -186,7 +207,7 @@
     </aside>
     <div class="bg-[#FFFFFF] flex flex-col lg:flex-row"> <!--Contenido completo-->
                                                                                                         <!--lg:w-[23rem] xl:w-[52%] xl:max-w-[58%] 2xl:min-w-[58%] 2xl:w-[60%]-->
-        <section id="pub" class="bg-[#F8F5F5] relative flex flex-col items-center top-32 md:top-24 md:py-8 lg:top-[130px] w-full lg:w-[41%] 2xl:min-w-[58%] 2xl:w-[60%] lg:ml-[5rem] xl:ml-[6rem] mr-5 min-h-[36rem]"> <!--Publicaciones-->
+        <section id="pub" class="bg-[#F8F5F5] relative flex flex-col items-center top-28 md:top-24 md:py-8 lg:top-[130px] w-full lg:w-[41%] 2xl:min-w-[58%] 2xl:w-[60%] lg:ml-[5rem] xl:ml-[6rem] mr-5 min-h-[36rem]"> <!--Publicaciones-->
             
             <div class="pub bg-white p-4 relative sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
                 <div class="mt-2">
@@ -362,5 +383,9 @@
         </div>                                                                    <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
+    <script src="../index.js"></script>
+    <script src="mapeo.js"></script>
+    <script src="perfil.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
